2008-05-15 [colin]	3.4.0cvs40

	* src/imap.c
		Fix certificate port on TLS. It was 
		previously always 0.
		**IMPORTANT INFORMATION**: this will trigger 
		one wrong "New certificate" warning at the 
		first connection with this fix, if using STARTTLS
		on IMAP.
	* src/gtk/sslcertwindow.c
		Make labels selectable

2008-05-15 [colin]	3.4.0cvs39

	* src/imap.c
		Fix double free when STARTTLS fails (for
		example due to refusing the certificate)

2008-05-15 [paul]	3.4.0cvs38

	* manual/advanced.xml
		fix typo

2008-05-15 [paul]	3.4.0cvs37

	* manual/advanced.xml
	* src/prefs_send.c
		make outgoing_fallback_to_ascii a hidden pref

2008-05-14 [colin]	3.4.0cvs36

	* src/main.c
	* src/mainwindow.c
	* src/mainwindow.h
		Make it possible to cancel quit when Claws
		ask whether to empty trash.

2008-05-14 [colin]	3.4.0cvs35

	* src/compose.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_send.c
		Add a preference to be able to specify an
		outgoing charset/encoding but still fallback
		to 7bit US-ASCII when possible (default TRUE,
		same behavior as pre-cvs34)

2008-05-14 [colin]	3.4.0cvs34

	* src/compose.c
		Always use the specified encoding and charset if it is
		specified, even if the mail is ASCII.

2008-05-13 [paul]	3.4.0cvs33

	* src/ldapupdate.c
		fix the build warnings the easy way for now

2008-05-13 [colin]	3.4.0cvs32

	* src/prefs_themes.c
		Count .png files as icons too (fixes part
		of bug 1609, 'Icon issues')

2008-05-13 [wwp]	3.4.0cvs31

	* src/addressbook_foldersel.c
		Fix wrong check (completes 3.4.0.cvs30).

2008-05-12 [wwp]	3.4.0cvs30

	* src/addressbook.c
	* src/addressbook_foldersel.c
	* src/filtering.c
	* src/matcher.c
	* src/prefs_matcher.c
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/bogofilter/bogofilter_gtk.c
	* src/plugins/dillo_viewer/dillo_prefs.c
	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/spamassassin/spamassassin_gtk.c
		Fix for bug 1604 "found_in_addressbook in Any in non English local",