@@ -1,3 +1,8 @@
+2008-05-15 [colin]	3.4.0cvs41
+
+	* src/gtk/sslcertwindow.c
+		Print SHA1 fingerprint too
+
 2008-05-15 [colin]	3.4.0cvs40
 
 	* src/imap.c
